Подключает основные иконки.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -23,11 +23,11 @@
         <img class="header__img" width="33" height="38" src="./images/logos/logo-mobile.svg" alt="Логотип Cat Energy">
       </picture>
     </a>
-    <a class="header__logo header__logo--only-mobile" href="index.html">
-      <img class="header__img" width="101" height="18" src="./images/logos/logo-text.svg" alt="Cat Energy">
+    <a class="header__logo-secondary" href="index.html">
+      <span class="visually-hidden">Cat Energy</span>
     </a>
     <nav class="main-nav">
-      <ul class="main-nav__list">
+      <ul class="main-nav__list main-nav__list--closed">
         <li class="main-nav__item">
           <a class="main-nav__link" href="./index.html">Главная</a>
         </li>
@@ -359,9 +359,11 @@
           </li>
         </ul>
         <div class="copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          <a class="copyright__icon-link" href="https://htmlacademy.ru/intensive/adaptive">
-            <span class="visually-hidden">Переход на сайт разработчика</span>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="visually-hidden">Перейти на сайт разработчика</span>
+            HTML Academy
+            <div class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive">
+            </div>
           </a>
         </div>
       </div>
