--- a/source/index.html
+++ b/source/index.html
@@ -23,11 +23,11 @@
         <img class="header__img" width="33" height="38" src="./images/logos/logo-mobile.svg" alt="Логотип Cat Energy">
       </picture>
     </a>
-    <a class="header__logo header__logo--only-mobile" href="index.html">
-      <img class="header__img" width="101" height="18" src="./images/logos/logo-text.svg" alt="Cat Energy">
+    <a class="header__logo-secondary" href="index.html">
+      <span class="visually-hidden">Cat Energy</span>
     </a>
     <nav class="main-nav">
-      <ul class="main-nav__list">
+      <ul class="main-nav__list main-nav__list--closed">
         <li class="main-nav__item">
           <a class="main-nav__link main-nav__link--current" href="">Главная</a>
         </li>
@@ -56,7 +56,7 @@
           <source type="image/png" media="(min-width: 768px)" width="709" height="609" srcset="images/intro/can-tablet@1x.png 1x, images/intro/can-tablet@2x.png 2x">
           <img class="intro__img" width="280" height="270" src="images/intro/can-mobile@1x.png" srcset="images/intro/can-mobile@2x.png 2x" alt="Банка с кормом Cat Energy">
         </picture>
-        <a class="intro__button button button--primary" href="">Подобрать программу</a>
+        <a class="intro__button button button--primary" href="form.html">Подобрать программу</a>
       </section>
     </div>
 
@@ -149,8 +149,8 @@
     </div>
     <div class="wrapper wrapper--bottom">
       <div class="bottom container">
-        <a class="bottom__link" href="index.html">
-          <img class="bottom__logo" width="128" height="24" src="./images/logos/logo-text.svg" alt="CAT ENERGY">
+        <a class="bottom__logo" href="index.html">
+          <span class="visually-hidden">CAT ENERGY</span>
         </a>
         <ul class="socials">
           <li class="socials__item">
@@ -170,9 +170,11 @@
           </li>
         </ul>
         <div class="copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          <a class="copyright__icon-link" href="https://htmlacademy.ru/intensive/adaptive">
-            <span class="visually-hidden">Переход на сайт разработчика</span>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="visually-hidden">Перейти на сайт разработчика</span>
+            HTML Academy
+            <div class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive">
+            </div>
           </a>
         </div>
       </div>
