Добавляет кастомные checkbox и radio. Добавляет состояния интерактивным элементам.

--- a/source/form.html
+++ b/source/form.html
@@ -144,22 +144,22 @@
     </div>
     <div class="wrapper wrapper--bottom">
       <div class="bottom container">
-        <a class="bottom__link" href="index.html">
-          <img class="bottom__logo" width="128" height="24" src="./images/logos/logo-text.svg" alt="CAT ENERGY">
+        <a class="bottom__logo" href="index.html">
+          <span class="visually-hidden">CAT ENERGY</span>
         </a>
         <ul class="socials">
           <li class="socials__item">
-            <a class="socials__link" href="https://vk.com/htmlacademy">
+            <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link" href="https://www.youtube.com/user/htmlacademyru">
+            <a class="socials__link socials__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Youtube</span>
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link" href="https://t.me/htmlacademy">
+            <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
