Исправляет контентый вектор. Добавляет compare-slider.

--- a/source/form.html
+++ b/source/form.html
@@ -23,8 +23,9 @@
         <img class="header__img" width="33" height="38" src="./images/logos/logo-mobile.svg" alt="Логотип Cat Energy">
       </picture>
     </a>
-    <a class="header__logo-secondary" href="index.html">
-      <span class="visually-hidden">Cat Energy</span>
+    <a class="header__logo header__logo--secondary" href="index.html">
+      <span class="visually-hidden">Перейти на гланую страницу</span>
+      <img class="header__img" width="101" height="18" src="../../images/logos/logo-text.svg" alt="Текстовый логотип Cat Energy">
     </a>
     <nav class="main-nav">
       <ul class="main-nav__list main-nav__list--closed">
@@ -145,7 +146,8 @@
     <div class="wrapper wrapper--bottom">
       <div class="bottom container">
         <a class="bottom__logo" href="index.html">
-          <span class="visually-hidden">CAT ENERGY</span>
+          <span class="visually-hidden">Перейти на гланую страницу</span>
+          <img class="bottom__img" width="128" height="24" src="../../images/logos/logo-text.svg" alt="Текстовый логотип Cat Energy">
         </a>
         <ul class="socials">
           <li class="socials__item">
