--- a/source/index.html
+++ b/source/index.html
@@ -17,14 +17,16 @@
 
   <header class="header container">
     <a class="header__logo" href="index.html">
+      <span class="visually-hidden">Перейти на гланую страницу</span>
       <picture>
         <source media="(min-width: 1440px)" srcset="./images/logos/logo-desktop.svg" width="202" height="59">
         <source media="(min-width: 768px)" srcset="./images/logos/logo-tablet.svg" width="174" height="50">
         <img class="header__img" width="33" height="38" src="./images/logos/logo-mobile.svg" alt="Логотип Cat Energy">
       </picture>
     </a>
-    <a class="header__logo-secondary" href="index.html">
-      <span class="visually-hidden">Cat Energy</span>
+    <a class="header__logo header__logo--secondary" href="index.html">
+      <span class="visually-hidden">Перейти на гланую страницу</span>
+      <img class="header__img" width="101" height="18" src="../../images/logos/logo-text.svg" alt="Текстовый логотип Cat Energy">
     </a>
     <nav class="main-nav">
       <ul class="main-nav__list main-nav__list--closed">
@@ -124,7 +126,7 @@
             <img class="compare-slider__img compare-slider__img--after" width="280" height="256" src="images/compare-slider/cat-after-mobile@1x.png" srcset="images/compare-slider/cat-after-mobile@2x.png 2x" alt="Кот после похудения">
           </picture>
           <label class="visually-hidden" for="compare-slider">До и после</label>
-          <input class="compare-slider__range" type="range" min="0" max="100" value="50" id="compare-slider" oninput="slide()">
+          <input class="compare-slider__range" type="range" min="0" max="100" value="50" id="compareSlider" oninput="slide()">
         </div>
       </section>
     </div>
@@ -150,7 +152,8 @@
     <div class="wrapper wrapper--bottom">
       <div class="bottom container">
         <a class="bottom__logo" href="index.html">
-          <span class="visually-hidden">CAT ENERGY</span>
+          <span class="visually-hidden">Перейти на гланую страницу</span>
+          <img class="bottom__img" width="128" height="24" src="../../images/logos/logo-text.svg" alt="Текстовый логотип Cat Energy">
         </a>
         <ul class="socials">
           <li class="socials__item">
