Добавляет иконки в programms

--- a/source/index.html
+++ b/source/index.html
@@ -65,14 +65,14 @@
     <section class="programs container">
       <h2 class="visually-hidden">Программы питания</h2>
       <ul class="programs__list">
-        <li class="programs__item">
+        <li class="programs__item programs__item--slim">
           <h3 class="programs__title">Похудение</h3>
           <p class="programs__text">
             Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
           <a class="programs__link" href="catalog.html">Каталог slim</a>
         </li>
-        <li class="programs__item">
+        <li class="programs__item programs__item--strong">
           <h3 class="programs__title">Набор массы</h3>
           <p class="programs__text">
             Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
@@ -126,7 +126,7 @@
             <img class="compare-slider__img compare-slider__img--after" width="280" height="256" src="images/compare-slider/cat-after-mobile@1x.png" srcset="images/compare-slider/cat-after-mobile@2x.png 2x" alt="Кот после похудения">
           </picture>
           <label class="visually-hidden" for="compare-slider">До и после</label>
-          <input class="compare-slider__range" type="range" min="0" max="100" value="50" id="compareSlider" oninput="slide()">
+          <input class="compare-slider__range" type="range" min="0" max="100" value="50" id="compareSlider">
         </div>
       </section>
     </div>
