Добавляет сетки для header, intro, programs.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,7 +27,7 @@
       <span class="visually-hidden">Перейти на гланую страницу</span>
       <img class="header__img" width="101" height="18" src="../../images/logos/logo-text.svg" alt="Текстовый логотип Cat Energy">
     </a>
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--catalog">
       <ul class="main-nav__list main-nav__list--closed">
         <li class="main-nav__item">
           <a class="main-nav__link" href="./index.html">Главная</a>
