--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
       <span class="visually-hidden">Перейти на гланую страницу</span>
       <img class="header__img" width="101" height="18" src="../../images/logos/logo-text.svg" alt="Текстовый логотип Cat Energy">
     </a>
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--index">
       <ul class="main-nav__list main-nav__list--closed">
         <li class="main-nav__item">
           <a class="main-nav__link main-nav__link--current" href="#">Главная</a>
@@ -55,7 +55,7 @@
         <p class="intro__text">Занялся собой? Займись котом!</p>
         <picture>
           <source type="image/png" media="(min-width: 1440px)" width="552" height="499" srcset="images/intro/can-desktop@1x.png 1x, images/intro/can-desktop@2x.png 2x">
-          <source type="image/png" media="(min-width: 768px)" width="709" height="609" srcset="images/intro/can-tablet@1x.png 1x, images/intro/can-tablet@2x.png 2x">
+          <source type="image/png" media="(min-width: 768px)" width="708" height="609" srcset="images/intro/can-tablet@1x.png 1x, images/intro/can-tablet@2x.png 2x">
           <img class="intro__img" width="280" height="270" src="images/intro/can-mobile@1x.png" srcset="images/intro/can-mobile@2x.png 2x" alt="Банка с кормом Cat Energy">
         </picture>
         <a class="intro__button button button--primary" href="form.html">Подобрать программу</a>
