Добавляет сетки для example.

--- a/source/index.html
+++ b/source/index.html
@@ -115,6 +115,10 @@
             <dt class="example__property">затрачено времени</dt>
             <dd class="example__value">60 ДНЕЙ</dd>
           </div>
+          <div class="example__item example__item--total">
+            <dt class="example__property example__property--total">Затраты на питание: </dt>
+            <dd class="example__value example__value--total"> 15 000 руб.</dd>
+          </div>
         </dl>
         <div class="example__compare-slider compare-slider ">
           <picture>
