--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,7 +25,7 @@
     </a>
     <a class="header__logo header__logo--secondary" href="index.html">
       <span class="visually-hidden">Перейти на гланую страницу</span>
-      <img class="header__img" width="101" height="18" src="../../images/logos/logo-text.svg" alt="Текстовый логотип Cat Energy">
+      <img class="header__img" width="101" height="18" src="../../images/logos/logo-text-header.svg" alt="Текстовый логотип Cat Energy">
     </a>
     <nav class="main-nav main-nav--catalog">
       <ul class="main-nav__list">
@@ -335,7 +335,10 @@
       <section class="contacts">
         <h2 class="visually-hidden">Наши контакты</h2>
         <div class="contacts__info">
-          <p class="contacts__title">Приглашаем к сотрудничеству дилеров!</p>
+          <p class="contacts__title">
+            Приглашаем<br>
+            к сотрудничеству дилеров!
+          </p>
           <address class="contacts__address">
             ул. Большая Конюшенная, д. 19/8
             <p class="contacts__empty-line"></p>
