Добавляет меню навингации в поток и скрывает бургер-кнопку при отключении Javascript.

--- a/source/form.html
+++ b/source/form.html
@@ -27,8 +27,8 @@
       <span class="visually-hidden">Перейти на гланую страницу</span>
       <img class="header__img" width="101" height="18" src="../../images/logos/logo-text-header.svg" alt="Текстовый логотип Cat Energy">
     </a>
-    <nav class="main-nav main-nav--form">
-      <ul class="main-nav__list">
+    <nav class="main-nav main-nav--no-js main-nav--form">
+      <ul class="main-nav__list main-nav__list--no-js">
         <li class="main-nav__item">
           <a class="main-nav__link" href="./index.html">Главная</a>
         </li>
@@ -39,7 +39,7 @@
           <a class="main-nav__link main-nav__link--current" href="#">Подбор программы</a>
         </li>
       </ul>
-      <button class="burger-toggle opened-nav" type="button">
+      <button class="burger-toggle burger-toggle--no-js opened-nav" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </nav>
