--- a/source/index.html
+++ b/source/index.html
@@ -28,8 +28,8 @@
       <span class="visually-hidden">Перейти на гланую страницу</span>
       <img class="header__img" width="101" height="18" src="../../images/logos/logo-text-header.svg" alt="Текстовый логотип Cat Energy">
     </a>
-    <nav class="main-nav main-nav--index">
-      <ul class="main-nav__list">
+    <nav class="main-nav main-nav--no-js main-nav--index">
+      <ul class="main-nav__list main-nav__list--no-js">
         <li class="main-nav__item">
           <a class="main-nav__link main-nav__link--current" href="#">Главная</a>
         </li>
@@ -40,8 +40,8 @@
           <a class="main-nav__link" href="form.html">Подбор программы</a>
         </li>
       </ul>
-      <button class="burger-toggle opened-nav" type="button">
-        <span class="visually-hidden">Открыть меню</span>
+      <button class="burger-toggle burger-toggle--no-js opened-nav" type="button">
+        <span class="visually-hidden">Открыть/закрыть меню</span>
       </button>
     </nav>
   </header>
