Правит conatiner, добавляет сетки для page__title.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,6 +17,7 @@
 
   <header class="header container">
     <a class="header__logo" href="index.html">
+      <span class="visually-hidden">Перейти на гланую страницу</span>
       <picture>
         <source type="image/svg+xml" media="(min-width: 1440px)" srcset="./images/logos/logo-desktop.svg" width="202" height="59">
         <source type="image/svg+xml" media="(min-width: 768px)" srcset="./images/logos/logo-tablet.svg" width="174" height="50">
@@ -319,7 +320,7 @@
     </section>
 
     <section class="subscribe container">
-      <h2 class="subscribe__title container">Акции и новинки</h2>
+      <h2 class="subscribe__title">Акции и новинки</h2>
       <p class="subscribe__text">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
       <form class="subscribe__form" action="https://echo.htmlacademy.ru" method="get">
         <label class="visually-hidden" for="email">email</label>
