--- a/source/form.html
+++ b/source/form.html
@@ -46,7 +46,7 @@
   </header>
 
   <main class="main">
-    <h1 class="page__title container container--form-tablet">Подбор программы</h1>
+    <h1 class="page__title page__title--form-tablet">Подбор программы</h1>
     <form class="form" action="https://echo.htmlacademy.ru" method="get">
       <p class="form__text container container--form-tablet">
         Заполните анкету, и мы подберем<br>
