Вносит правки по --no-js элементам.

--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,7 @@
 
 <body class="page__body">
 
-  <header class="header container">
+  <header class="header header--no-js container">
     <a class="header__logo" href="index.html">
       <picture>
         <source type="image/svg+xml" media="(min-width: 1440px)" srcset="./images/logos/logo-desktop.svg" width="202" height="59">
@@ -46,7 +46,7 @@
   </header>
 
   <main class="main">
-    <h1 class="page__title page__title--form-tablet">Подбор программы</h1>
+    <h1 class="page__title container container--form-tablet">Подбор программы</h1>
     <form class="form" action="https://echo.htmlacademy.ru" method="get">
       <p class="form__text container container--form-tablet">
         Заполните анкету, и мы подберем<br>
