--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
 
 <body class="page__body">
 
-  <header class="header container">
+  <header class="header header--no-js container">
     <a class="header__logo" href="index.html">
       <span class="visually-hidden">Перейти на гланую страницу</span>
       <picture>
