Добавляет сетки во все версии catalog.html до main-products включительно.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,7 +24,7 @@
         <img class="header__img" width="33" height="38" src="./images/logos/logo-mobile.svg" alt="Логотип Cat Energy">
       </picture>
     </a>
-    <a class="header__logo header__logo--secondary" href="index.html">
+    <a class="header__logo header__logo--secondary header__logo--no-js" href="index.html">
       <span class="visually-hidden">Перейти на гланую страницу</span>
       <img class="header__img" width="101" height="18" src="../../images/logos/logo-text-header.svg" alt="Текстовый логотип Cat Energy">
     </a>
@@ -92,7 +92,7 @@
           <a class="main-card__title-link" href="#">
             <h3 class="main-card__title">Cat Energy PRO 1000 г</h3>
           </a>
-          <dl class="main-card__dl">
+          <dl class="main-card__list">
             <div class="main-card__item">
               <dt class="main-card__property">Масса</dt>
               <dd class="main-card__value">1000 г</dd>
@@ -121,7 +121,7 @@
           <a class="main-card__title-link" href="#">
             <h3 class="main-card__title">Cat Energy PRO 500 г</h3>
           </a>
-          <dl class="main-card__dl">
+          <dl class="main-card__list">
             <div class="main-card__item">
               <dt class="main-card__property">Масса</dt>
               <dd class="main-card__value">500 г</dd>
@@ -150,7 +150,7 @@
           <a class="main-card__title-link" href="#">
             <h3 class="main-card__title">Cat Energy PRO 1000 г</h3>
           </a>
-          <dl class="main-card__dl">
+          <dl class="main-card__list">
             <div class="main-card__item">
               <dt class="main-card__property">Масса</dt>
               <dd class="main-card__value">1000 г</dd>
@@ -179,7 +179,7 @@
           <a class="main-card__title-link" href="#">
             <h3 class="main-card__title">Cat Energy SLIM 500 г</h3>
           </a>
-          <dl class="main-card__dl">
+          <dl class="main-card__list">
             <div class="main-card__item">
               <dt class="main-card__property">Масса</dt>
               <dd class="main-card__value">500 г</dd>
@@ -208,7 +208,7 @@
           <a class="main-card__title-link" href="#">
             <h3 class="main-card__title">Cat Energy SLIM 1000 г</h3>
           </a>
-          <dl class="main-card__dl">
+          <dl class="main-card__list">
             <div class="main-card__item">
               <dt class="main-card__property">Масса</dt>
               <dd class="main-card__value">1000 г</dd>
@@ -237,7 +237,7 @@
           <a class="main-card__title-link" href="#">
             <h3 class="main-card__title">Cat Energy slim 500 г</h3>
           </a>
-          <dl class="main-card__dl">
+          <dl class="main-card__list">
             <div class="main-card__item">
               <dt class="main-card__property">Масса</dt>
               <dd class="main-card__value">500 г</dd>
@@ -255,7 +255,7 @@
         </li>
 
         <li class="main-card main-card--special">
-          <h3 class="main-card__title">Показать еще 100500 товаров</h3>
+          <h3 class="main-card__title main-card__title--special">Показать еще 100500 товаров</h3>
           <p class="main-card__text">На самом деле вкусов гораздо больше!</p>
           <a class="main-card__button button button--secondary" href="#">Показать все</a>
         </li>
