--- a/source/form.html
+++ b/source/form.html
@@ -23,7 +23,7 @@
         <img class="header__img" width="33" height="38" src="./images/logos/logo-mobile.svg" alt="Логотип Cat Energy">
       </picture>
     </a>
-    <a class="header__logo header__logo--secondary" href="index.html">
+    <a class="header__logo header__logo--secondary header__logo--no-js" href="index.html">
       <span class="visually-hidden">Перейти на гланую страницу</span>
       <img class="header__img" width="101" height="18" src="../../images/logos/logo-text-header.svg" alt="Текстовый логотип Cat Energy">
     </a>
