Добавляет контейнер центровщик для контактов.

--- a/source/form.html
+++ b/source/form.html
@@ -133,16 +133,18 @@
     <div class="wrapper wrapper--contacts">
       <section class="contacts">
         <h2 class="visually-hidden">Наши контакты</h2>
-        <div class="contacts__info">
-          <p class="contacts__title">
-            Приглашаем<br>
-            к сотрудничеству дилеров!
-          </p>
-          <address class="contacts__address">
-            ул. Большая Конюшенная, д. 19/8
-            <p class="contacts__empty-line"></p>
-            Санкт-Петербург
-          </address>
+        <div class="contacts__info-container">
+          <div class="contacts__info">
+            <p class="contacts__title">
+              Приглашаем<br>
+              к сотрудничеству дилеров!
+            </p>
+            <address class="contacts__address">
+              ул. Большая Конюшенная, д. 19/8
+              <p class="contacts__empty-line"></p>
+              Санкт-Петербург
+            </address>
+          </div>
         </div>
         <div class="contacts__map" id="map"></div>
       </section>
