--- a/source/catalog.html
+++ b/source/catalog.html
@@ -315,7 +315,10 @@
         </li>
       </ul>
       <div class="gift">
-        <p class="gift__text">Закажите все и получите чехол для кота в подарок!</p>
+        <p class="gift__text">
+          Закажите все<br>
+          и получите чехол для кота в подарок!
+        </p>
       </div>
     </section>
 
