--- a/source/index.html
+++ b/source/index.html
@@ -146,7 +146,7 @@
       <section class="contacts">
         <h2 class="visually-hidden">Наши контакты</h2>
         <div class="contacts__info-container">
-          <div class="contacts__info">
+          <div class="contacts__info contacts__info--index">
             <p class="contacts__title">
               Приглашаем<br>
               к сотрудничеству дилеров!</p>
